login 뷰 변경, search 템플릿 프로필 기능 추가

--- a/templates/stocks/stocks_search.html
+++ b/templates/stocks/stocks_search.html
@@ -9,4 +9,10 @@
     <input type="text" name="search_term" placeholder="Enter company name">
     <button type="submit">Search</button>
 </form>
+
+<!-- 프로필 페이지로 이동하는 버튼 -->
+<a href="{% url 'profile' %}">
+    <button type="button">프로필 설정</button>
+</a>
+
 {% endblock %}
