--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,10 @@
         <nav>
             <ul>
                 {% if user.is_authenticated %}
-                    <li><a href="{% url 'logout' %}">로그아웃</a></li>
+                    <form method="POST" action="{% url 'logout' %}">
+                        {% csrf_token %}
+                        <button type="submit">Logout</button>
+                    </form>
                 {% else %}
                     <li><a href="{% url 'login' %}">로그인</a></li>
                     <li><a href="{% url 'signup' %}">회원가입</a></li>
@@ -18,24 +21,10 @@
             </ul>
         </nav>
     </header>
-
     <main>
-        {% if user.is_authenticated %}
-            <div class="stock-search">
-                <form method="get" action="{% url 'stock_search' %}">
-                    <input type="text" name="q" placeholder="Search for stocks..." required>
-                    <button type="submit">Search</button>
-                </form>
-            </div>
-        {% endif %}
-
         {% block content %}
         <!-- 각 페이지의 콘텐츠가 여기에 삽입됩니다. -->
         {% endblock %}
     </main>
-
-    <footer>
-        <p>&copy; 2024 Stalk</p>
-    </footer>
 </body>
 </html>
