--- a/templates/stocks/stocks_chart.html
+++ b/templates/stocks/stocks_chart.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 
-{% block title %}{{ stock_info.longName }} - Chart{% endblock %}
+{% block title %}{{ stock_info.longName }} 차트{% endblock %}
 
 {% block content %}
-<h1>{{ stock_info.longName }} - Stock Chart</h1>
+<h1>{{ stock_info.longName }} 차트</h1>
 <div id="chart"></div>
 {% endblock %}
 
