--- a/templates/stocks/stocks_intro.html
+++ b/templates/stocks/stocks_intro.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}{{ stock_info.longName }} - Intro{% endblock %}
+{% block title %}{{ stock_info.longName }} 소개{% endblock %}
 
 {% block content %}
 <h1>{{ stock_info.longName }} ({{ stock_info.symbol }})</h1>
