search 템플릿 수정, 여전히 주식 검색 불가,  stocks/views.py 수정필요, post 접근 안됨

--- a/templates/stocks/stocks_search.html
+++ b/templates/stocks/stocks_search.html
@@ -6,7 +6,7 @@
 <h1>주식 검색</h1>
 <form method="post">
     {% csrf_token %}
-    <input type="text" name="search_term" placeholder="Enter company name">
+    <input type="text" name="search_term" placeholder="주식 이름을 검색하세요">
     <button type="submit">검색</button>
 </form>
 
