forum views.py, templates 재작성

--- a/templates/forum/post_comment_detail.html
+++ b/templates/forum/post_comment_detail.html
@@ -1,13 +1,18 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>댓글 수정하기</h1>
+<h1>댓글 수정/삭제</h1>
 
 <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">저장</button>
+    <button type="submit" class="btn btn-primary">수정</button>
 </form>
 
-<a href="{% url 'forum:post_read' ticker=ticker post_id=post.id %}">취소</a>
+<form method="post" action="{% url 'forum:post_comment_delete' ticker=view.kwargs.ticker post_id=view.kwargs.post_id comment_id=comment.id %}" class="mt-3">
+    {% csrf_token %}
+    <button type="submit" class="btn btn-danger">삭제</button>
+</form>
+
+<a href="{% url 'forum:post_read' ticker=view.kwargs.ticker post_id=view.kwargs.post_id %}" class="btn btn-secondary mt-3">취소</a>
 {% endblock %}
