--- a/templates/forum/forum_list.html
+++ b/templates/forum/forum_list.html
@@ -1,21 +1,46 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>{{ ticker }} 토론방</h1>
+<h1>{{ stock.company_name }} ({{ stock.ticker }}) 토론방</h1>
 
-<a href="{% url 'forum:post_create' ticker=ticker %}">새 포스트 만들기</a>
+<a href="{% url 'forum:post_create' ticker=stock.ticker %}" class="btn btn-primary">새 글 작성</a>
 
 {% if posts %}
-    <ul>
+    <ul class="list-group mt-3">
         {% for post in posts %}
-            <li>
-                <a href="{% url 'forum:post_read' ticker=ticker post_id=post.post_id %}">
-                    {{ post.title }} by {{ post.author }} (Views: {{ post.views }})
+            <li class="list-group-item">
+                <a href="{% url 'forum:post_read' ticker=stock.ticker post_id=post.post_id %}">
+                    {{ post.title }}
                 </a>
+                <small class="text-muted">
+                    by {{ post.author }} | 조회수: {{ post.views }} | {{ post.created_at|date:"Y-m-d H:i" }}
+                </small>
             </li>
         {% endfor %}
     </ul>
+    
+    {% if is_paginated %}
+        <nav aria-label="Page navigation" class="mt-3">
+            <ul class="pagination">
+                {% if page_obj.has_previous %}
+                    <li class="page-item"><a class="page-link" href="?page={{ page_obj.previous_page_number }}">이전</a></li>
+                {% endif %}
+                {% for num in page_obj.paginator.page_range %}
+                    {% if page_obj.number == num %}
+                        <li class="page-item active"><a class="page-link" href="#">{{ num }}</a></li>
+                    {% else %}
+                        <li class="page-item"><a class="page-link" href="?page={{ num }}">{{ num }}</a></li>
+                    {% endif %}
+                {% endfor %}
+                {% if page_obj.has_next %}
+                    <li class="page-item"><a class="page-link" href="?page={{ page_obj.next_page_number }}">다음</a></li>
+                {% endif %}
+            </ul>
+        </nav>
+    {% endif %}
 {% else %}
-    <p>아직 올라온 포스트가 없습니다.</p>
+    <p class="mt-3">아직 게시글이 없습니다.</p>
 {% endif %}
+
+<a href="{% url 'stocks:detail' pk=stock.ticker %}" class="btn btn-secondary mt-3">주식 상세 정보로 돌아가기</a>
 {% endblock %}
