--- a/templates/forum/post_comment_create.html
+++ b/templates/forum/post_comment_create.html
@@ -1,13 +1,13 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>댓글 작성하기</h1>
+<h1>댓글 작성</h1>
 
 <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">완료</button>
+    <button type="submit" class="btn btn-primary">작성</button>
 </form>
 
-<a href="{% url 'forum:post_read' ticker=ticker post_id=post.id %}">포스트로 돌아가기</a>
+<a href="{% url 'forum:post_read' ticker=view.kwargs.ticker post_id=view.kwargs.post_id %}" class="btn btn-secondary mt-3">취소</a>
 {% endblock %}
