--- a/templates/forum/post_delete.html
+++ b/templates/forum/post_delete.html
@@ -1,13 +1,13 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>포스트 삭제</h1>
-<p>정말로 이 포스트를 삭제하시겠습니까?: "{{ post.title }}"?</p>
+<h1>글 삭제</h1>
+
+<p>정말로 이 글을 삭제하시겠습니까?</p>
 
 <form method="post">
     {% csrf_token %}
-    <button type="submit">삭제</button>
+    <button type="submit" class="btn btn-danger">삭제</button>
+    <a href="{% url 'forum:post_read' ticker=view.kwargs.ticker post_id=view.kwargs.post_id %}" class="btn btn-secondary">취소</a>
 </form>
-
-<a href="{% url 'forum:post_read' ticker=ticker post_id=post.id %}">취소</a>
 {% endblock %}
