--- a/templates/forum/post_read.html
+++ b/templates/forum/post_read.html
@@ -14,11 +14,17 @@
 <div class="mt-3">
     <a href="{% url 'forum:post_update' ticker=post.stock_ticker.ticker post_id=post.post_id %}" class="btn btn-primary">수정</a>
     <a href="{% url 'forum:post_delete' ticker=post.stock_ticker.ticker post_id=post.post_id %}" class="btn btn-danger">삭제</a>
-    <a href="{% url 'forum:post_comment_create' ticker=post.stock_ticker.ticker post_id=post.post_id %}" class="btn btn-success">댓글 작성</a>
 </div>
 
 <h2 class="mt-4">댓글</h2>
 {% include 'forum/post_comment_list.html' %}
+
+<h3 class="mt-4">댓글 작성</h3>
+<form method="post">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button type="submit" class="btn btn-primary">작성</button>
+</form>
 
 <a href="{% url 'forum:forum_list' ticker=post.stock_ticker.ticker %}" class="btn btn-secondary mt-3">목록으로 돌아가기</a>
 {% endblock %}
