--- a/templates/forum/post_comment_delete.html
+++ b/templates/forum/post_comment_delete.html
@@ -1,18 +1,11 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>댓글 수정/삭제</h1>
-
+<h2>댓글 삭제 확인</h2>
+<p>정말로 이 댓글을 삭제하시겠습니까?</p>
 <form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit" class="btn btn-primary">수정</button>
-</form>
-
-<form method="post" action="{% url 'forum:post_comment_delete' ticker=view.kwargs.ticker post_id=view.kwargs.post_id comment_id=comment.id %}" class="mt-3">
     {% csrf_token %}
     <button type="submit" class="btn btn-danger">삭제</button>
 </form>
-
 <a href="{% url 'forum:post_read' ticker=view.kwargs.ticker post_id=view.kwargs.post_id %}" class="btn btn-secondary mt-3">취소</a>
 {% endblock %}
