--- a/templates/forum/post_read.html
+++ b/templates/forum/post_read.html
@@ -17,7 +17,7 @@
 </div>
 
 <h2 class="mt-4">댓글</h2>
-{% include 'forum/post_comment_list.html' %}
+{% include 'forum/post_comment_list.html' with post=post %}
 
 <h3 class="mt-4">댓글 작성</h3>
 <form method="post">
