차트 표시, Plotly 라이브러리를 먼저 로드한 다음, 그 위에 JavaScript 코드를 실행함으로써 ReferenceError 오류 해결

--- a/templates/stocks/stocks_detail.html
+++ b/templates/stocks/stocks_detail.html
@@ -13,6 +13,26 @@
 
 <h2>Stock Chart</h2>
 <div id="chart"></div>
+<script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+<script>
+    var data = JSON.parse('{{ chart_data|escapejs }}');
+    var dates = Object.keys(data);
+    var prices = Object.values(data);
+
+    var trace = {
+        x: dates,
+        y: prices,
+        type: 'scatter'
+    };
+
+    var layout = {
+        title: 'Stock Price (Last Month)',
+        xaxis: {title: 'Date'},
+        yaxis: {title: 'Price'}
+    };
+
+    Plotly.newPlot('chart', [trace], layout);
+</script>
 
 <h2>News</h2>
 {% if news %}
