base.html 코드 변경, 로그아웃 버튼 생성, post 기능 추가 및 stocks 내용 추가 필요

--- a/templates/base.html
+++ b/templates/base.html
@@ -6,23 +6,22 @@
     <title>{% block title %}STALK{% endblock %}</title>
 </head>
 <body>
+    <header>
+        <h1>미국 주식 커뮤니티 <a href="{% url 'home' %}" class="no-underline">STALK</a></h1>
+    </header>
     <main>
         {% block content %}
-        <!-- 각 페이지의 콘텐츠가 여기에 삽입됩니다. -->
+            {% if user.is_authenticated %}
+                <a href="{% url 'stocks:search' %}" class="btn">주식 검색 페이지로 이동</a>
+            {% else %}
+                <nav>
+                    <ul>
+                        <li><a href="{% url 'login' %}">로그인</a></li>
+                        <li><a href="{% url 'signup' %}">회원가입</a></li>
+                    </ul>
+                </nav>
+            {% endif %}
         {% endblock %}
-        <nav>
-            <ul>
-                {% if user.is_authenticated %}
-                    <form method="POST" action="{% url 'logout' %}">
-                        {% csrf_token %}
-                        <button type="submit">Logout</button>
-                    </form>
-                {% else %}
-                    <li><a href="{% url 'login' %}">로그인</a></li>
-                    <li><a href="{% url 'signup' %}">회원가입</a></li>
-                {% endif %}
-            </ul>
-        </nav>
     </main>
 </body>
 </html>
