post_update 및 requirements.txt googletrans 라이브러리 추가

--- a/templates/forum/post_update.html
+++ b/templates/forum/post_update.html
@@ -3,10 +3,10 @@
 {% block content %}
 <h1>글 수정</h1>
 
-<form method="post">
+<form method="post" enctype="multipart/form-data">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit" class="btn btn-primary">수정</button>
+    <button type="submit">수정</button>
 </form>
 
 <a href="{% url 'forum:post_read' ticker=view.kwargs.ticker post_id=view.kwargs.post_id %}" class="btn btn-secondary mt-3">취소</a>
