googletrans로 번역 기능 추가, 너무 느림, 하루 15000자 제한

--- a/templates/stocks/stocks_detail.html
+++ b/templates/stocks/stocks_detail.html
@@ -26,7 +26,7 @@
     };
 
     var layout = {
-        title: 'Stock Price (Last Month)',
+        title: '주가 (1개월)',
         xaxis: {title: 'Date'},
         yaxis: {title: 'Price'}
     };
