models, forms 수정, 마이그레이션, 답글 템플릿 수정

--- a/templates/forum/post_comment_list.html
+++ b/templates/forum/post_comment_list.html
@@ -10,6 +10,34 @@
                         | <a href="{% url 'forum:post_comment_delete' ticker=post.stock_ticker.ticker post_id=post.post_id comment_id=comment.id %}">삭제</a>
                     {% endif %}
                 </small>
+                
+                <!-- 대댓글 작성 폼 -->
+                <form method="post" action="{% url 'forum:post_read' ticker=post.stock_ticker.ticker post_id=post.post_id %}" class="mt-2">
+                    {% csrf_token %}
+                    <div class="form-group">
+                        <textarea name="content" class="form-control" rows="2" placeholder="답글을 작성하세요"></textarea>
+                    </div>
+                    <input type="hidden" name="parent_id" value="{{ comment.id }}">
+                    <button type="submit" class="btn btn-sm btn-secondary mt-1">답글 작성</button>
+                </form>
+                
+                <!-- 대댓글 표시 -->
+                {% if comment.replies.all %}
+                    <ul class="list-group mt-2">
+                        {% for reply in comment.replies.all %}
+                            <li class="list-group-item">
+                                <p>{{ reply.content }}</p>
+                                <small class="text-muted">
+                                    by {{ reply.author }} | {{ reply.created_at|date:"Y-m-d H:i" }}
+                                    {% if user == reply.author %}
+                                        | <a href="{% url 'forum:post_comment_update' ticker=post.stock_ticker.ticker post_id=post.post_id comment_id=reply.id %}">수정</a>
+                                        | <a href="{% url 'forum:post_comment_delete' ticker=post.stock_ticker.ticker post_id=post.post_id comment_id=reply.id %}">삭제</a>
+                                    {% endif %}
+                                </small>
+                            </li>
+                        {% endfor %}
+                    </ul>
+                {% endif %}
             </li>
         {% endfor %}
     </ul>
