--- a/templates/forum/post_read.html
+++ b/templates/forum/post_read.html
@@ -23,7 +23,7 @@
 </div>
 
 <h2 class="mt-4">댓글</h2>
-{% include 'forum/post_comment_list.html' with post=post %}
+{% include 'forum/post_comment_list.html' with post=post comments=comments %}
 
 <h3 class="mt-4">댓글 작성</h3>
 <form method="post">
